index.html, quote.js 수정

--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
           />
         </form>
 
-        <ul id="todo-list">
-          <li></li>
-        </ul>
+        <ol id="todo-list">
+        </ol>
       </div>
     </main>
 
