--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           />
         </form>
 
-        <ol id="todo-list">
-        </ol>
+        <ul id="todo-list">
+        </ul>
       </div>
     </main>
 
