--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <div></div>
           <div id="quote">
             <span></span>
+            <span> -</span>
             <span></span>
           </div>
           <div></div>
