quote 글자크기 수정

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <footer>
           <div></div>
           <div id="quote">
-            <span></span>
+            <span></span> <br>
             <span> -</span>
             <span></span>
           </div>
